Globally fix wrapping of long lines in pre blocks
Seems like we have pre blocks in other places too,
so it makes sense moving this to the stylesheet.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,6 +2,8 @@ body {
 	overflow-y: scroll;
 }
 
+pre { white-space: pre-wrap; }
+
 /* Make .warning work even on tables with .table-striped */
 .table > tbody > .warning > td { background-color: #fcf8e3 !important ; }
 
